src/test/ui/error-codes/E0301.stderr
error[E0301]: cannot mutably borrow in a pattern guard
  --> $DIR/E0301.rs:4:19
   |
LL |         option if option.take().is_none() => {},
   |                   ^^^^^^ borrowed mutably in pattern guard

error[E0596]: cannot borrow immutable local variable `option` as mutable
  --> $DIR/E0301.rs:4:19
   |
LL |         option if option.take().is_none() => {},
   |         ------    ^^^^^^ cannot borrow mutably
   |         |
   |         help: make this binding mutable: `mut option`

error: aborting due to 2 previous errors

Some errors occurred: E0301, E0596.
For more information about an error, try `rustc --explain E0301`.
